# ROS-ArUco-marker-detection-and-6DOF-pose-estimation-of-USB-camera

./: README.md
Camera Calibration/: README  README.md
src/: 7-12  aruco_marker_finder.launch  readme.txt  usb_cam_stream_publisher.launch
src/712/: CMakeLists.txt  ChArUco_Detection.cpp  Detection.cpp  Notes for project.txt  note.txt
src/716/: note.txt
src/ardrone_test/: CMakeLists.txt  README.md  package.xml
src/ardrone_test/src/: Detection.cpp  ardrone.cpp  ardrone_detect.cpp
